Test_Temperature_Visual

--- a/junction/templates/index.html
+++ b/junction/templates/index.html
@@ -182,7 +182,8 @@
     <div class="container">
         <h2>Climate Data Options</h2>
         <ul>
-            <li class="temperature"><a href="/plot/temperature" target="_blank">Global Temperature Change</a></li>
+            <!-- 修改了 Global Temperature Change 的链接，指向 temperature_visualize -->
+            <li class="temperature"><a href="/temperature_visualize" target="_blank">Global Temperature Change</a></li>
             <li class="co2"><a href="/plot/co2" target="_blank">CO2 Emissions</a></li>
             <li class="sea_level"><a href="/plot/sea_level" target="_blank">Sea Level Rise</a></li>
             <li class="ice_mass_loss"><a href="/plot/ice_mass_loss" target="_blank">Glacier Ice Mass Loss</a></li>
@@ -236,5 +237,3 @@
     </script>
 </body>
 </html>
-
-
