--- a/junction/templates/index.html
+++ b/junction/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Climate Data Dashboard</title>
+    <title>From space data to climate change</title>
     <style>
         /* 通用样式 */
         body {
@@ -178,7 +178,7 @@
     </style>
 </head>
 <body>
-    <h1>Climate Data Dashboard</h1>
+    <h1>From space data to climate change</h1>
     <div class="container">
         <h2>Climate Data Options</h2>
         <ul>
