新增了海平面可视化

--- a/junction/templates/index.html
+++ b/junction/templates/index.html
@@ -196,7 +196,7 @@
         <ul>
             <li class="temperature"><a href="/temperature_visualize" target="_blank">Global Temperature Change</a></li>
             <li class="co2"><a onclick="openModal('co2Modal')">CO2 Emissions</a></li>
-            <li class="sea_level"><a onclick="openModal('seaLevelModal')">Sea Level Rise</a></li>
+            <li class="sea_level"><a href="/sea_level_visualize" target="_blank">Sea Level Change</a></li>
             <li class="ice_mass_loss"><a onclick="openModal('iceMassLossModal')">Glacier Ice Mass Loss</a></li>
         </ul>
 
