--- a/junction/templates/sea_level_visualize.html
+++ b/junction/templates/sea_level_visualize.html
@@ -80,16 +80,15 @@
 
     <!-- 表单让用户输入年份 -->
     <form action="/sea_level_visualize" method="post">
-        <label for="start_year">Start Year: </label>
-        <input type="number" id="start_year" name="start_year" required>
-        <label for="end_year">End Year: </label>
-        <input type="number" id="end_year" name="end_year" required>
+    <label for="start_year">Start Year: </label>
+    <input type="number" id="start_year" name="start_year" min="1993" max="2024" required>
 
-        <!-- 包裹按钮的 div，确保按钮居中 -->
-        <div class="button-container">
-            <button type="submit">Generate Graph</button>
-        </div>
-    </form>
+    <label for="end_year">End Year: </label>
+    <input type="number" id="end_year" name="end_year" min="1993" max="2024" required>
+
+    <button type="submit">Generate Graph</button>
+</form>
+
 
     <div class="graph-container">
         <!-- 在这里嵌入 Plotly 图表 -->
