--- a/junction/templates/ice_sheets_visualize.html
+++ b/junction/templates/ice_sheets_visualize.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Global Mean Sea Level Change</title>
+    <title>Ice Sheets Mass Visualization</title>
     <style>
         body {
             background-color: #e6f7ff; /* 浅蓝色背景 */
@@ -35,6 +35,16 @@
         }
 
         input {
+            padding: 8px;
+            font-size: 14px;
+            margin: 5px 0 15px 0;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            width: 100%;
+            box-sizing: border-box;
+        }
+
+        select {
             padding: 8px;
             font-size: 14px;
             margin: 5px 0 15px 0;
@@ -76,15 +86,22 @@
     </style>
 </head>
 <body>
-    <h1>Global Mean Sea Level Change</h1>
+    <h1>Ice Sheets Mass Change</h1>
 
-    <!-- 表单让用户输入年份 -->
-    <form action="/sea_level_visualize" method="post">
+    <!-- 表单让用户输入年份范围和选择数据文件 -->
+    <form action="/ice_sheets_visualize" method="post">
+        <label for="data_file">Choose Data File: </label>
+        <select id="data_file" name="data_file" required>
+            <option value="" disabled selected>Please choose a place</option>
+            <option value="antarctica_mass_data.csv">Antarctica</option>
+            <option value="greenland_mass_data.csv">Greenland</option>
+        </select>
+
         <label for="start_year">Start Year: </label>
-        <input type="number" id="start_year" name="start_year" min="1993" max="2024" required>
+        <input type="number" id="start_year" name="start_year" min="2002" max="2024" required>
 
         <label for="end_year">End Year: </label>
-        <input type="number" id="end_year" name="end_year" min="1993" max="2024" required>
+        <input type="number" id="end_year" name="end_year" min="2002" max="2024" required>
 
         <div class="button-container">
             <button type="submit">Generate Graph</button>
@@ -97,4 +114,3 @@
     </div>
 </body>
 </html>
-
