--- a/junction/templates/temperature_visualize.html
+++ b/junction/templates/temperature_visualize.html
@@ -94,7 +94,7 @@
 
     {% if img_url %}
     <h2>Generated Plot</h2>
-    <img src="{{ img_url }}" alt="Generated Plot">
+    <img src="{{ img_url }}" alt="Generated Graph">
     {% endif %}
 </body>
 </html>
