修改折线图的标记

--- a/junction/templates/index.html
+++ b/junction/templates/index.html
@@ -194,7 +194,7 @@
     <div class="container">
         <h2>Climate Data Options</h2>
         <ul>
-            <li class="temperature"><a href="/temperature_visualize" target="_blank">Global Temperature Change</a></li>
+            <li class="temperature"><a href="/global_temperature_visualize" target="_blank">Global Temperature Change</a></li>
             <li class="co2"><a href="/carbon_dioxide_visualize" target="_blank">CO₂ Emissions</a></li>
             <li class="sea_level"><a href="/sea_level_visualize" target="_blank">Sea Level Change</a></li>
             <li class="ice_mass_loss"><a href="/ice_sheets_visualize" target="_blank">Glacier Ice Mass Loss</a></li>
