--- a/junction/templates/temperature_visualize.html
+++ b/junction/templates/temperature_visualize.html
@@ -6,7 +6,7 @@
     <title>Global Temperature Change</title>
     <style>
         body {
-            background-color: #e8f5e9; /* 浅绿色背景 */
+            background-color: #f4f4f9;
             font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 20px;
